# foodframe

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: CD.yml  CI.yml
data/: fndds_17_18.csv  fped_17_18.csv
foodframe/: __init__.py  foodframe.py  hei.py  nutrition.py
foodframe.egg-info/: PKG-INFO
src/foodframe/: __init__.py  categories.py  foodframe.py  hei.py  nutrition.py
tests/: test_import.py
