# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodframe"
version = "0.0.1"
description = "It's about food."
readme = "README.md"
authors = [{ name = "Annie K. Lamar", email = "kalamar@stanford.edu" }, {name = "Tushar Dalmia"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["food", "foodbanks", "nutrition", "hei", "refed", "feeding america"]
dependencies = [
    "pandas"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/AnnieKLamar/foodframe"
